[PLM-5963] | [LogixPro | Consolidation Manager | Consolidation | The Transaction grid is not visible on the shipping transactions popup.] | [Fixed]

--- a/src/app/dialogs/cm-shipping-transaction/cm-shipping-transaction.component.scss
+++ b/src/app/dialogs/cm-shipping-transaction/cm-shipping-transaction.component.scss
@@ -27,3 +27,7 @@ table {
  .table-shiping-tr  {
     background-color: var(--clr-table-header);
 }
+
+.h-220px{
+    height: 220px;
+}
